--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redis",
-  "version": "2.1.0",
+  "version": "2.1.1-autopilot",
   "description": "Redis client library",
   "keywords": [
     "database",
